Bug 272568 - Crash after changing the date range of the displayed data in the "Investment Moving Average Price Graph" report
Summary: Crash after changing the date range of the displayed data in the "Investment ...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-05 21:50 UTC by Cristian Oneț
Modified: 2011-05-06 07:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cristian Oneț 2011-05-05 21:50:43 UTC
Application: kmymoney (4.5.90-svn1230505)
KDE Platform Version: 4.6.2 (4.6.2) (Compiled from sources)
Qt Version: 4.7.2
Operating System: Linux 2.6.37-gentoo-r4 x86_64
Distribution: "Gentoo Base System release 1.12.14"

-- Information about the crash:
- What I was doing when the application crashed:

Played with the date range of the "Investment Moving Average Price Graph".
KMymoney always crashes at least after 3 consecutive changes of the date range.
Steps to reproduce.
1. Choose all dates
2. Chose a user defined date with the 'to' field open
3. Choose all dates again if at step 2 you didn't get a crash at this step you should definitely get one

The crash can be reproduced every time.

-- Backtrace:
Application: KMyMoney (kmymoney), signal: Aborted
[KCrash Handler]
#6  0x00007f8dd4c5c175 in raise () from /lib/libc.so.6
#7  0x00007f8dd4c5d590 in abort () from /lib/libc.so.6
#8  0x00007f8dd66d06a4 in qt_message_output(QtMsgType, char const*) () from /usr/lib64/qt4/libQtCore.so.4
#9  0x00007f8dd66d0852 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#10 0x00007f8dd66d0a05 in qFatal(char const*, ...) () from /usr/lib64/qt4/libQtCore.so.4
#11 0x00007f8dd9f11d05 in QVector<KDChart::CartesianDiagramDataCompressor::DataPoint>::operator[] (this=0x73016f8, i=1023) at /usr/include/qt4/QtCore/qvector.h:347
#12 0x00007f8dd9f10924 in KDChart::CartesianDiagramDataCompressor::invalidate (this=0x712b000, position=...) at /home/cristi/dezvoltare/kmymoney/libkdchart/src/KDChartCartesianDiagramDataCompressor_p.cpp:772
#13 0x00007f8dd9f0e46e in KDChart::CartesianDiagramDataCompressor::slotModelDataChanged (this=0x712b000, topLeftIndex=..., bottomRightIndex=...) at /home/cristi/dezvoltare/kmymoney/libkdchart/src/KDChartCartesianDiagramDataCompressor_p.cpp:396
#14 0x00007f8dd9ec2d89 in KDChart::CartesianDiagramDataCompressor::qt_metacall (this=0x712b000, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0x7fff92f08a70) at /home/cristi/dezvoltare/kmymoney-build/libkdchart/src/moc_KDChartCartesianDiagramDataCompressor_p.cpp:107
#15 0x00007f8dd67e3a4f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#16 0x00007f8dd682e917 in QAbstractItemModel::dataChanged(QModelIndex const&, QModelIndex const&) () from /usr/lib64/qt4/libQtCore.so.4
#17 0x00007f8dd9eecd32 in KDChart::AttributesModel::slotDataChanged (this=0x712ab20, topLeft=..., bottomRight=...) at /home/cristi/dezvoltare/kmymoney/libkdchart/src/KDChartAttributesModel.cpp:662
#18 0x00007f8dd9ebfc42 in KDChart::AttributesModel::qt_metacall (this=0x712ab20, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0x7fff92f08c80) at /home/cristi/dezvoltare/kmymoney-build/libkdchart/src/moc_KDChartAttributesModel.cpp:104
#19 0x00007f8dd9ec0b91 in KDChart::PrivateAttributesModel::qt_metacall (this=0x712ab20, _c=QMetaObject::InvokeMetaMethod, _id=34, _a=0x7fff92f08c80) at /home/cristi/dezvoltare/kmymoney-build/libkdchart/src/moc_KDChartAbstractDiagram.cpp:178
#20 0x00007f8dd67e3a4f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#21 0x00007f8dd682e917 in QAbstractItemModel::dataChanged(QModelIndex const&, QModelIndex const&) () from /usr/lib64/qt4/libQtCore.so.4
#22 0x00007f8dd5ebbaeb in ?? () from /usr/lib64/qt4/libQtGui.so.4
#23 0x00007f8dd5ebbc8f in QStandardItem::setData(QVariant const&, int) () from /usr/lib64/qt4/libQtGui.so.4
#24 0x00007f8dd5ec27b0 in QStandardItemModel::setData(QModelIndex const&, QVariant const&, int) () from /usr/lib64/qt4/libQtGui.so.4
#25 0x000000000056fee8 in reports::KReportChartView::setDataCell (this=0x3b34ea0, row=1023, column=1, data=3.7199999999999998) at /home/cristi/dezvoltare/kmymoney/kmymoney/reports/kreportchartview.cpp:537
#26 0x000000000056fc85 in reports::KReportChartView::drawPivotRowSet (this=0x3b34ea0, rowNum=1, rowSet=..., rowType=reports::eAverage, legendText=..., startColumn=1, endColumn=1553) at /home/cristi/dezvoltare/kmymoney/kmymoney/reports/kreportchartview.cpp:516
#27 0x000000000056e16d in reports::KReportChartView::drawPivotChart (this=0x3b34ea0, grid=..., config=..., numberColumns=1553, columnHeadings=..., rowTypeList=..., columnTypeHeaderList=...) at /home/cristi/dezvoltare/kmymoney/kmymoney/reports/kreportchartview.cpp:284
#28 0x000000000058a3d4 in reports::PivotTable::drawChart (this=0x32889b0, chartView=...) at /home/cristi/dezvoltare/kmymoney/kmymoney/reports/pivottable.cpp:1864
#29 0x00000000004f519b in KReportsView::KReportTab::updateReport (this=0x3b154e0) at /home/cristi/dezvoltare/kmymoney/kmymoney/views/kreportsview.cpp:193
#30 0x00000000004f4cfa in KReportsView::KReportTab::loadTab (this=0x3b154e0) at /home/cristi/dezvoltare/kmymoney/kmymoney/views/kreportsview.cpp:151
#31 0x00000000004f72de in KReportsView::loadView (this=0x160ff80) at /home/cristi/dezvoltare/kmymoney/kmymoney/views/kreportsview.cpp:549
#32 0x00000000004f65ac in KReportsView::slotLoadView (this=0x160ff80) at /home/cristi/dezvoltare/kmymoney/kmymoney/views/kreportsview.cpp:365
#33 0x00000000004ffa15 in KReportsView::qt_metacall (this=0x160ff80, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0x7fff92f09d60) at /home/cristi/dezvoltare/kmymoney-build/kmymoney/views/kreportsview.moc:115
#34 0x00007f8dd67e3a4f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#35 0x00007f8dda487255 in MyMoneyFile::dataChanged (this=0x7f8dda6f45b0) at /home/cristi/dezvoltare/kmymoney-build/kmymoney/mymoney/mymoneyfile.moc:96
#36 0x00007f8dda474d2f in MyMoneyFile::commitTransaction (this=0x7f8dda6f45b0) at /home/cristi/dezvoltare/kmymoney/kmymoney/mymoney/mymoneyfile.cpp:390
#37 0x00007f8dda487023 in MyMoneyFileTransaction::commit (this=0x7fff92f0a0f0) at /home/cristi/dezvoltare/kmymoney/kmymoney/mymoney/mymoneyfile.cpp:2705
#38 0x00000000004f8943 in KReportsView::slotConfigure (this=0x160ff80) at /home/cristi/dezvoltare/kmymoney/kmymoney/views/kreportsview.cpp:769
#39 0x00000000004ffa59 in KReportsView::qt_metacall (this=0x160ff80, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fff92f0a450) at /home/cristi/dezvoltare/kmymoney-build/kmymoney/views/kreportsview.moc:119
#40 0x00007f8dd67e3a4f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#41 0x00007f8dd5fa0492 in QAbstractButton::clicked(bool) () from /usr/lib64/qt4/libQtGui.so.4
#42 0x00007f8dd5cab83b in ?? () from /usr/lib64/qt4/libQtGui.so.4
#43 0x00007f8dd5cacefb in ?? () from /usr/lib64/qt4/libQtGui.so.4
#44 0x00007f8dd5cad16c in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#45 0x00007f8dd594c72d in QWidget::event(QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#46 0x00007f8dd58f67dc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#47 0x00007f8dd58fc4bb in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#48 0x00007f8dd8e425c6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#49 0x00007f8dd67cbd6b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#50 0x00007f8dd58fad22 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/qt4/libQtGui.so.4
#51 0x00007f8dd597fc84 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#52 0x00007f8dd597ed20 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#53 0x00007f8dd59a8fb2 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#54 0x00007f8dcfe01fa1 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#55 0x00007f8dcfe06638 in ?? () from /usr/lib/libglib-2.0.so.0
#56 0x00007f8dcfe067ec in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#57 0x00007f8dd67f7e53 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#58 0x00007f8dd59a892e in ?? () from /usr/lib64/qt4/libQtGui.so.4
#59 0x00007f8dd67caac2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#60 0x00007f8dd67caea4 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#61 0x00007f8dd67cef1b in QCoreApplication::exec() () from /usr/lib64/qt4/libQtCore.so.4
#62 0x000000000045f705 in main (argc=1, argv=0x7fff92f0c5b8) at /home/cristi/dezvoltare/kmymoney/kmymoney/main.cpp:260

Reported using DrKonqi
Comment 1 Cristian Oneț 2011-05-05 22:08:49 UTC
SVN commit 1230515 by conet:

BUG: 272568

Fix a bad implementation of CartesianDiagramDataCompressor::isValidCachePosition. If you look at how m_data is used at line 771 and other places you'll know why it needed the fix.

Alvaro, what is the procedure when there is a bug in libkdchart?

 M  +1 -1      KDChartCartesianDiagramDataCompressor_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1230515
Comment 2 Alvaro Soliverez 2011-05-05 22:15:13 UTC
You should send a message to kdchart-support@kdab.net. They are usually very responsive. Although I don't know how far behind we are from their current version.
Comment 3 Cristian Oneț 2011-05-05 22:24:47 UTC
(In reply to comment #2)
> You should send a message to kdchart-support@kdab.net. They are usually very
> responsive. Although I don't know how far behind we are from their current
> version.

Done, thanks for the info.
Comment 4 Thomas Baumgart 2011-05-06 07:46:26 UTC
(In reply to comment #2)
> Although I don't know how far behind we are from their current version.

Should we check and possibly update our own copy in trunk? If yes, who can do that?