BUG: 272568

Fix a bad implementation of CartesianDiagramDataCompressor::isValidCachePosition. If you look at how m_data is used at line 771 and other places you'll know why it needed the fix.

Alvaro, what is the procedure when there is a bug in libkdchart?

svn path=/trunk/extragear/office/kmymoney/; revision=1230515